--- a/cmdline/examples/output.html
+++ b/cmdline/examples/output.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="twitter:card" content="player">
     <meta name="twitter:site" content="@guri_vr">
-    <meta name="twitter:title" content="my super title">
+    <meta name="twitter:title" content="super title">
     <meta name="twitter:image" content="https://s3.amazonaws.com/gurivr/logo_twitter.png">
     <meta name="twitter:description" content="">
     <meta name="twitter:player" content="https://s3.amazonaws.com/gurivr/s/undefined.html">
@@ -13,13 +13,13 @@
     <meta name="twitter:player:height" content="370">
 
     <meta name="apple-mobile-web-app-capable" content="yes">
-    <title>my super title</title>
+    <title>super title</title>
     <script src="https://aframe.io/releases/0.6.0/aframe.min.js"></script>
     <script src="https://rawgit.com/ngokevin/aframe-look-at-component/master/dist/aframe-look-at-component.min.js"></script>
-    <script src="https://rawgit.com/ngokevin/kframe/master/components/sun-sky/dist/aframe-sun-sky.min.js"></script>
+    <script src="https://jeromeetienne.github.io/AR.js/aframe/build/aframe-ar.js"></script>
     <style>
       html, body, #root, #arVideo {
-        background-color: #000;
+        background-color: transparent;
         height: 100vh;
         width: 100vw;
         color: #fff;
@@ -66,7 +66,7 @@
       <a-assets></a-assets>
       
   <a-entity class="chapter" visible="false">
-    <a-sun-sky material="sunPosition: 0 0 -1"></a-sun-sky>
+    <a-entity look-at="0 1.6 0" scale="25 25 25" position="0 1.6 -8" text="value: Hi!; font: roboto; align: center; anchor: center;"></a-entity>
   </a-entity>
 
     </a-scene>
@@ -150,8 +150,17 @@
     start()
 
     
+  var sky = document.querySelectorAll('a-sky, a-panorama, a-videosphere');
+
+  for (var i = 0; i < sky.length; i++) {
+    sky[i].setAttribute('visible', 'false');
+  }
+
+  var scene = document.querySelector('a-scene');
+  scene.setAttribute('arjs', 'sourceType: webcam;')
+  scene.setAttribute('embedded', 'embedded')
+
   
     </script>
   </body>
 </html>
-
